[gd_scene load_steps=13 format=2]

[ext_resource path="res://Animals/MiniBunny chill.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Animals/ForestBunny.gd" type="Script" id=3]
[ext_resource path="res://UI/panel_Intro.png" type="Texture" id=4]
[ext_resource path="res://Animals/FreedPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 31, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 31, 0, 31, 28 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "chill",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
height = 24.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.0
height = 18.0

[sub_resource type="DynamicFont" id=6]
size = 13
font_data = ExtResource( 6 )

[node name="ForestBunny" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( -2, 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "chill"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="RescuePopUp" type="PopupDialog" parent="."]
visible = true
anchor_right = 10.0
margin_left = -35.0
margin_top = 10.0
margin_right = -35.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 0.6 )

[node name="Sprite" type="Sprite" parent="RescuePopUp"]
position = Vector2( 28.1395, 24.1483 )
scale = Vector2( 0.128269, 0.700245 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="RescuePopUp"]
margin_left = 6.33334
margin_right = 301.334
margin_bottom = 71.0001
rect_scale = Vector2( 0.15, 0.75 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]I can't thank you enough for getting me out of here.  Please be sure to help the rest of my friends locked up in the area."
tab_size = 3
text = "I can't thank you enough for getting me out of here.  Please be sure to help the rest of my friends locked up in the area."
fit_content_height = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FreedPopup" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
